--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
     "react-intersection-observer": "^9.5.2",
-    "react-router-dom": "^6.15.0"
+    "react-player": "^2.13.0",
+    "react-router-dom": "^6.15.0",
+    "video.js": "^8.5.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
