--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "framer-motion": "^10.16.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-dropzone": "^14.2.3",
     "react-icons": "^4.10.1",
     "react-intersection-observer": "^9.5.2",
     "react-player": "^2.13.0",
