--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dropzone": "^14.2.3",
     "react-icons": "^4.10.1",
     "react-intersection-observer": "^9.5.2",
+    "react-lazy-load-image-component": "^1.6.0",
     "react-player": "^2.13.0",
     "react-router-dom": "^6.15.0",
     "video.js": "^8.5.2"
