--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-player": "^2.13.0",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.15.0",
+    "react-toastify": "^10.0.5",
     "swiper": "^10.3.1",
     "video.js": "^8.5.2"
   },
